--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="utf-8">
     <title>Single Day Calendar</title>
     <script src="./javascripts/application.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="./stylesheets/application.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./stylesheets/application.css" media="screen" title="no title">
   </head>
   <body>
     <div class="calendar">
       <div class="hours-container">
         <ul>
-          <li><strong>9:00</strong>AM</li>
-          <li>9:30</li>
-          <li><strong>10:00</strong>AM</li>
-          <li>10:30</li>
-          <li><strong>11:00</strong>AM</li>
-          <li>11:30</li>
-          <li><strong>12:00</strong>PM</li>
-          <li>12:30</li>
-          <li><strong>1:00</strong>PM</li>
-          <li>1:30</li>
-          <li><strong>2:00</strong>PM</li>
-          <li>2:30</li>
-          <li><strong>3:00</strong>PM</li>
-          <li>3:30</li>
-          <li><strong>4:00</strong>PM</li>
-          <li>4:30</li>
-          <li><strong>5:00</strong>PM</li>
-          <li>5:30</li>
-          <li><strong>6:00</strong>PM</li>
-          <li>6:30</li>
-          <li><strong>7:00</strong>PM</li>
-          <li>7:30</li>
-          <li><strong>8:00</strong>PM</li>
-          <li>8:30</li>
-          <li><strong>9:00</strong>PM</li>
+          <li><strong>9:00</strong><span class="graytext">AM</span></li>
+          <li><span class="graytext">9:30</span></li>
+          <li><strong>10:00</strong><span class="graytext">AM</span></li>
+          <li><span class="graytext">10:30</span></li>
+          <li><strong>11:00</strong><span class="graytext">AM</span></li>
+          <li><span class="graytext">11:30</span></li>
+          <li><strong>12:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">12:30</span></li>
+          <li><strong>1:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">1:30</span></li>
+          <li><strong>2:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">2:30</span></li>
+          <li><strong>3:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">3:30</span></li>
+          <li><strong>4:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">4:30</span></li>
+          <li><strong>5:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">5:30</span></li>
+          <li><strong>6:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">6:30</span></li>
+          <li><strong>7:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">7:30</span></li>
+          <li><strong>8:00</strong><span class="graytext">PM</span></li>
+          <li><span class="graytext">8:30</span></li>
+          <li><strong>9:00</strong><span class="graytext">PM</span></li>
         </ul>
       </div>
       <div class="events-container">
